--- a/src/main/resources/templates/takeTour.html
+++ b/src/main/resources/templates/takeTour.html
@@ -19,25 +19,25 @@
             <h4 class = "upelement"><a class="upelement", href="/contacts">КОНТАКТИ</a></h4>
         </div>
     </div>
-    <h1>ЗАМОВЛЕННЯ ТУРУ</h1>
+    <h1 id="takeHere">ЗАМОВЛЕННЯ ТУРУ</h1>
     <div id="mainDiv">
-        <select class="selector", name="" id="">
+        <select class="selector", name="firstSelect" id="category-select">
             <option class="option" value="" disabled selected>обери тип туру</option>
-            <option value="">Індивідуальний</option>
-            <option value="">Вихідного дня</option>
-            <option value="">7-денні тури</option>
+            <option value="індивідуальний">Індивідуальний</option>
+            <option value="тур Вихідного дня">Вихідного дня</option>
+            <option value="7-денний тур">7-денні тури</option>
         </select>
-        <select name="" id="">
+        <select name="secondSelect" id="tour-select" >
             <option class="option" value="" disabled selected>доступні тури</option>
             <th:block th:each="tour : ${tours}">
                 <option th:value="${tour.id}" th:text="${tour.title} + ' ' + ${tour.date}"></option>
             </th:block>
         </select>
-        <input type="text" placeholder="ім'я" required>
-        <input type="text" placeholder="прізвище" required>
-        <input type="text" placeholder="телефон" required>
-        <input type="text" placeholder="e-mail" required>
-        <a href="/you_booked_tour"><button>ЗАМОВИТИ ТУР</button></a>
+        <input value="name" type="text" placeholder="ім'я" required>
+        <input value="surname" type="text" placeholder="прізвище" required>
+        <input value="phone" type="text" placeholder="телефон" required>
+        <input value="email" type="text" placeholder="e-mail" required>
+        <input type="submit" />
     </div>
     <footer>
         <div id="contacts">
@@ -56,5 +56,37 @@
         </div>
     </footer>
 </form>
+<form action="/taking_tour" method="post">
+    <div id = "upper">
+        <img id = "logo", src="logoMain.png">
+        <div id="menu">
+            <h4 class = "upelement"><a class="upelement", href="/main">ГОЛОВНА</a></h4>
+            <h4 class = "upelement"><a class="upelement", href="/about">ПРО НАС</a></h4>
+            <h4 class = "upelement"><a class="upelement", href="/tours">ТУРИ</a></h4>
+            <h4 class = "upelement"><a class="upelement", href="/living">ПРОЖИВАННЯ</a></h4>
+            <h4 class = "upelement"><a class="upelement", href="/contacts">КОНТАКТИ</a></h4>
+        </div>
+    </div>
+    <h1>ЗАМОВЛЕННЯ ТУРУ</h1>
+    <h3>Дякуємо за ваше замовлення! Ви забронювали місце у обраному турі. Найближчим часом ми Вам зателефонуємо.</h3>
+    <a href="index.html"><button>НА ГОЛОВНУ</button></a>
+    <footer>
+        <div id="contacts">
+            <p>КОНТАКТИ</p>
+            <img src="contacs.png", id="img">
+        </div>
+        <div id="sec1">
+            <p>Умови подорожування</p>
+            <p>Як ми гарантуємо безпеку</p>
+            <p>Умови проживання</p>
+            <p>Ціни</p>
+        </div>
+        <div id="sec2">
+            <p>Чому нам довіряють</p>
+            <p>Більше інформації</p>
+        </div>
+    </footer>
+</form>
+<script type="text/javascript" src="/js/dropdown.js"></script>
 </body>
 </html>
