--- a/src/main/resources/templates/afterTakeTour.html
+++ b/src/main/resources/templates/afterTakeTour.html
@@ -21,7 +21,7 @@
     </div>
     <h1>ЗАМОВЛЕННЯ ТУРУ</h1>
     <h3>Дякуємо за ваше замовлення! Ви забронювали місце у обраному турі. Найближчим часом ми Вам зателефонуємо.</h3>
-    <a href="/main"><button>НА ГОЛОВНУ</button></a>
+    <a href="/main" id="likeButton">НА ГОЛОВНУ</a>
     <footer>
         <div id="contacts">
             <p>КОНТАКТИ</p>
