--- a/src/main/resources/templates/indTours.html
+++ b/src/main/resources/templates/indTours.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Індивідуальні тури</title>
-    <link rel="stylesheet" href="indTours.css">
+    <link rel="stylesheet" href="/css/indTours.css">
 </head>
 <body>
 <form action="/individual_tours" method="get">
@@ -66,7 +66,7 @@
                 <p class="toMargin">3. ПОХІД У КАРПАТИ</p>
                 <p>ДЕТАЛІ ТУРУ ОТРИМАЄШ НА Е-МЕЙЛ
                     ПІСЛЯ ЗАМОВЛЕННЯ ТУРУ</p>
-                <a href="/taking_tour"><button class="callButton">ЗАМОВИТИ ТУР</button></a>
+                <a href="/taking_tour">ЗАМОВИТИ ТУР</a>
             </div>
             <img src="/img/first3.jpg" alt="">
         </div>
@@ -82,7 +82,7 @@
                 <p class="toMargin">3. ПОХІД У КАРПАТИ</p>
                 <p class="toWidth">ДЕТАЛІ ТУРУ ОТРИМАЄШ НА Е-МЕЙЛ
                     ПІСЛЯ ЗАМОВЛЕННЯ ТУРУ</p>
-                <a href="/taking_tour"> <button class="callButton">ЗАМОВИТИ ТУР</button></a>
+                <a href="/taking_tour">ЗАМОВИТИ ТУР</a>
             </div>
         </div>
     </div>
