--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,14 +36,14 @@
                 <img id = "sticker" src="/img/happy.png">
             </div>
         </div>
-        <a href="tours.html"><button class="buttonChoose" ><h1>ОБРАТИ ТУР</h1></button></a>
+        <a href="/tours"><h1>ОБРАТИ ТУР</h1></a>
         <div id="textDiv">
             <p>МИ МАЄМО ДЛЯ ТЕБЕ</p>
         </div>
         <div id="imgDiv">
-            <a href="indTours.html"><img class="imgMain" src="/img/firstOne.png"></a>
-            <a href="wDaysTours.html"><img class="imgMain" src="/img/secondOne.png"></a>
-            <a href="sevenDaysTours.html"><img class="imgMain" src="/img/thirdOne.png"></a>
+            <a href="/individual_tours"><img class="imgMain" src="/img/firstOne.png"></a>
+            <a href="/weekend_tours"><img class="imgMain" src="/img/secondOne.png"></a>
+            <a href="/seven_days_tour"><img class="imgMain" src="/img/thirdOne.png"></a>
         </div>
         <div id="namesTours">
             <p class="text" id="indTours">індивідуальні тури</p>
@@ -78,7 +78,7 @@
                 </div>
                 <img id="priceImg" src="/img/best-price.png">
             </div>
-            <button onclick="parent.location='tours.html'" class="buttonChoose" ><h1>ОБРАТИ ТУР</h1></button>
+            <a href="/tours"><h1>ОБРАТИ ТУР</h1></a>
         </div>
         <div id="chooseDiv">
             <p class="p1">ЗАРАЗ НАЙБІЛЬШЕ ОБИРАЮТЬ</p>
@@ -91,7 +91,7 @@
                     <p>проживання у наметах, які ми надаємо при зустрічі</p>
                     <p>триразове харчування (варена каша/суп у казанці)</p>
                     <p>особистий ментор</p>
-                    <button onclick="parent.location='takeTour.html'" class="buttonChoose" ><h1>ЗАМОВИТИ ТУР</h1></button>
+                    <a href="/tours"><h1>ЗАМОВИТИ ТУР</h1><a href="/tours"></a>
                 </div>
             </div>
             <div class ="Tours">
@@ -104,7 +104,7 @@
                     <p id="hotel">три доби в готелі "КарпатиЛюкс" біля озера Синевір</p>
                     <p>триразове харчування</p>
                     <p>ментор на весь час походу</p>
-                    <button onclick="parent.location='takeTour.html'", class="buttonChoose" ><h1>ЗАМОВИТИ ТУР</h1></button>
+                    <a href="/tours"><h1>ЗАМОВИТИ ТУР</h1><a href="/tours"></a>
                 </div>
                 <img class="indPhoto" src="/img/7DaysTour.png">
             </div>
