--- a/src/main/resources/static/css/afterTakeTour.css
+++ b/src/main/resources/static/css/afterTakeTour.css
@@ -34,7 +34,7 @@ html, body{
     margin-top: -1%;
 }
 #menu>h4{
-    margin-top: 3%; 
+    margin-top: 3%;
     margin-bottom: 0;
 }
 #menu>h4:hover{
@@ -51,10 +51,11 @@ h1{
     text-align: center;
     font-size: 56px;
 }
-button{
+#likeButton{
     width: 700px;
     height: 100px;
 
+    text-decoration: none;
     background: #FD5E53;
     border-radius: 100px;
     border-width: 0;
@@ -64,12 +65,13 @@ button{
     font-size: 43px;
     color: #FFFFFF;
     text-align: center;
+    padding: 1%;
     margin: 0;
-    margin-left: 31%;
+    margin-left: 41%;
     margin-top: 3%;
     -webkit-text-stroke: 3px #FFFFFF;
 }
-button:hover{
+#likeButton:hover{
     background-color: #9F9F9F;
     transition: 1s;
 }
