--- a/src/main/resources/templates/takeCons.html
+++ b/src/main/resources/templates/takeCons.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Замовлення туру</title>
-    <link rel="stylesheet" href="takeTour.css">
+    <link rel="stylesheet" href="/css/takeTour.css">
 </head>
 <body>
+<form action="/taking_cons" method="post">
     <div id = "upper">
-        <img id = "logo", src="logoMain.png">
+        <img id = "logo", src="/img/logoMain.png">
         <div id="menu">
             <h4 class = "upelement"><a class="upelement", href="/main">ГОЛОВНА</a></h4>
             <h4 class = "upelement"><a class="upelement", href="/about">ПРО НАС</a></h4>
@@ -19,22 +20,22 @@
         </div>
     </div>
     <h1>ЗАПИС НА КОНСУЛЬТАЦІЮ</h1>
-    <div id="mainDiv">
-        <select class="selector", name="" id="">
-            <option class="option" value="" disabled selected>офлайн/онлайн</option>
-            <option value="">онлайн</option>
-            <option value="">офлайн</option>
-        </select>
-        <input type="text" placeholder="ім'я" required>
-        <input type="text" placeholder="прізвище" required>
-        <input type="text" placeholder="телефон" required>
-        <input type="text" placeholder="e-mail" required>
-        <a href="afterTakeCons.html"><button>ЗАПИСАТИСЯ НА КОНСУЛЬТАЦІЮ</button></a>
-    </div>
+        <div id="mainDiv">
+            <select class="selector", name="formatSelect" id="">
+                <option class="option" value="" disabled selected>офлайн/онлайн</option>
+                <option value="онлайн">онлайн</option>
+                <option value="офлайн">офлайн</option>
+            </select>
+            <input name="name" type="text" placeholder="ім'я" required>
+            <input name="surname" type="text" placeholder="прізвище" required>
+            <input name="phone" type="text" placeholder="телефон" required>
+            <input name="email" type="text" placeholder="e-mail" required>
+            <input type="submit"/>
+        </div>
     <footer>
         <div id="contacts">
             <p>КОНТАКТИ</p>
-            <img src="contacs.png", id="img">
+            <img src="/img/contacs.png", id="img">
         </div>
         <div id="sec1">
             <p>Умови подорожування</p>
@@ -47,5 +48,6 @@
             <p>Більше інформації</p>
         </div>
     </footer>
+</form>
 </body>
 </html>
