--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -25,7 +25,7 @@
     <div id="divFirst">
         <h1>ПРО НАС</h1>
         <h1 id="freeCons">БЕЗКОШТОВНА КОНСУЛЬТАЦІЯ</h1>
-        <button onclick="parent.location='takeCons.html'"><h1>ЗАПИСАТИСЯ</h1></button>
+        <a href="/taking_cons" class="takeTourButton1" id="cons"><h1>ЗАПИСАТИСЯ</h1></a>
         <p> 2016 РОКУ МАЄМО 3000 ПОСТІЙНИХ КЛІЄНТІВ І 5000+ КЛІЄНТІВ ЩОРІЧНО</p>
         <p>ЗА АДРЕСОЮ М. КИЇВБ ВУЛ. АКАДЕМІКА ЯНГЕЛЯ, 7 ЗНАХОДИТЬСЯ ОФІС TOURGO, В ЯКОМУ
             ПРАЦЮЄ ПОНАД 500 ЛЮДЕЙ, ЩОБ ЗРОБИТИ ВАШУ ПОДОРОЖ ДО КАРПАТ НЕЗАБУТНЬОЮ
@@ -38,7 +38,7 @@
             <p>ЗАМОВИТИ КОНСУЛЬТАЦІЮ МОЖНА ЗА ТЕЛЕФОНОМ +380984881021</p>
             <p id="dost">ДОСТПУНІ ОНЛАЙН/ОФЛАЙН КОНСУЛЬТАЦІЇ</p>
             <p id="free">БЕЗКОШТОВНА КОНСУЛЬТАЦІЯ</p>
-            <button onclick="parent.location='takeCons.html'", class="buttonChoose" ><p>ЗАПИСАТИСЯ</p></button>
+            <a href="/taking_cons" class="takeTourButton1" id="cons1"><h1>ЗАПИСАТИСЯ</h1></a>
         </div>
         <img id="indPhoto" src="/img/consulting.jpg">
     </div>
