--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -38,7 +38,7 @@
                 <p>адреса м. Київ, вуль. Академіка
                     Янгеля, 7</p>
             </div>
-            <button id="showOnMap">ПОКАЗАТИ НА КАРТІ</button>
+            <button id="showOnMap"><a href="https://www.google.com.ua/maps">ПОКАЗАТИ НА КАРТІ</a></button>
         </div>
     </div>
     <footer>
