--- a/src/main/resources/templates/indTours.html
+++ b/src/main/resources/templates/indTours.html
@@ -34,7 +34,7 @@
             <p>• МЕНТОР ПРИДІЛЯТИМЕ УВАГУ ТІЛЬКИ ТОБІ</p>
             <p>• ПОВНИЙ СОЦІАЛЬНИЙ ДЕТОКС</p>
             <p>• БІЛЬШЕ ЧАСУ НА ПІЗНАННЯ ПРИРОДИ КАРПАТ</p>
-            <a href="takeCons.html"><button class="chooseButton" , id="consultButton">ЗАМОВИТИ КОНСУЛЬТАЦІЮ</button></a>
+            <button class="chooseButton" , id="consultButton"><a href="/taking_cons">ЗАМОВИТИ КОНСУЛЬТАЦІЮ</a></button>
         </div>
         <img src="/img/first.jpg" alt="">
     </div>
@@ -52,7 +52,7 @@
                 <p class="toMargin">3. ПОХІД У КАРПАТИ</p>
                 <p class="toWidth">ДЕТАЛІ ТУРУ ОТРИМАЄШ НА Е-МЕЙЛ
                     ПІСЛЯ ЗАМОВЛЕННЯ ТУРУ</p>
-                <a href="/taking_tour"><button class="callButton">ЗАМОВИТИ ТУР</button></a>
+                <button class="callButton"><a href="/taking_tour">ЗАМОВИТИ ТУР</a></button>
             </div>
         </div>
         <div class="chooseTour">
@@ -66,7 +66,7 @@
                 <p class="toMargin">3. ПОХІД У КАРПАТИ</p>
                 <p>ДЕТАЛІ ТУРУ ОТРИМАЄШ НА Е-МЕЙЛ
                     ПІСЛЯ ЗАМОВЛЕННЯ ТУРУ</p>
-                <a href="/taking_tour">ЗАМОВИТИ ТУР</a>
+                <button class="callButton"><a href="/taking_tour">ЗАМОВИТИ ТУР</a></button>
             </div>
             <img src="/img/first3.jpg" alt="">
         </div>
@@ -82,7 +82,7 @@
                 <p class="toMargin">3. ПОХІД У КАРПАТИ</p>
                 <p class="toWidth">ДЕТАЛІ ТУРУ ОТРИМАЄШ НА Е-МЕЙЛ
                     ПІСЛЯ ЗАМОВЛЕННЯ ТУРУ</p>
-                <a href="/taking_tour">ЗАМОВИТИ ТУР</a>
+                <button class="callButton"><a href="/taking_tour">ЗАМОВИТИ ТУР</a></button>
             </div>
         </div>
     </div>
