--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
                 <img id = "sticker" src="/img/happy.png">
             </div>
         </div>
-        <a href="/tours"><h1>ОБРАТИ ТУР</h1></a>
+        <a href="/tours" id="likeButton"><h1>ОБРАТИ ТУР</h1></a>
         <div id="textDiv">
             <p>МИ МАЄМО ДЛЯ ТЕБЕ</p>
         </div>
@@ -78,7 +78,7 @@
                 </div>
                 <img id="priceImg" src="/img/best-price.png">
             </div>
-            <a href="/tours"><h1>ОБРАТИ ТУР</h1></a>
+            <a href="/tours" id="likeButton1"><h1>ОБРАТИ ТУР</h1></a>
         </div>
         <div id="chooseDiv">
             <p class="p1">ЗАРАЗ НАЙБІЛЬШЕ ОБИРАЮТЬ</p>
@@ -91,7 +91,7 @@
                     <p>проживання у наметах, які ми надаємо при зустрічі</p>
                     <p>триразове харчування (варена каша/суп у казанці)</p>
                     <p>особистий ментор</p>
-                    <a href="/tours"><h1>ЗАМОВИТИ ТУР</h1><a href="/tours"></a>
+                    <a href="/tours" id="takeTourButton"><h1>ЗАМОВИТИ ТУР</h1><a href="/tours"></a>
                 </div>
             </div>
             <div class ="Tours">
@@ -104,7 +104,7 @@
                     <p id="hotel">три доби в готелі "КарпатиЛюкс" біля озера Синевір</p>
                     <p>триразове харчування</p>
                     <p>ментор на весь час походу</p>
-                    <a href="/tours"><h1>ЗАМОВИТИ ТУР</h1><a href="/tours"></a>
+                    <a href="/tours" class="takeTourButton1"><h1>ЗАМОВИТИ ТУР</h1></a>
                 </div>
                 <img class="indPhoto" src="/img/7DaysTour.png">
             </div>
@@ -112,7 +112,7 @@
         <div id="fillIn">
             <p>НЕ ВПЕВНЕНИЙ ЯКИЙ ТУР ОБРАТИ АБО ПОТРЕБУЄШ КОНСУЛЬТАЦІЇ?</p>
             <p>ЗАПОВНИ ЗАЯВКУ І МИ ЗАТЕЛЕФОНУЄМО У НАЙБЛИЖЧУ ГОДИНУ</p>
-            <button onclick="parent.location='takeCons.html'" class="buttonChoose" id="btnFillIn" ><h1>ЗАПОВНИТИ ЗАЯВКУ</h1></button>
+            <a href="/taking_cons" class="takeTourButton1" id="cons"><h1>ЗАПОВНИТИ ЗАЯВКУ</h1></a>
         </div>
     </div>
     <footer>
