--- a/src/main/resources/templates/living.html
+++ b/src/main/resources/templates/living.html
@@ -29,7 +29,7 @@
             <p>ІНДИВІДУАЛЬНІ ТУРИ ТА ТУРИ ВИХІДНОГО ДНЯ</p>
             <p>Проживання у просторних, комфортабельних наметах, які можна отримати на місці зустрічи з ментором</p>
             <p id="useTents">Можна використовувати власні палатки</p>
-            <button onclick="parent.location='tours.html'" class="chooseButton">ОБРАТИ ТУР</button>
+            <button class="chooseButton"><a href="/tours">ОБРАТИ ТУР</a></button>
         </div>
     </div>
     <div class="info">
@@ -41,7 +41,7 @@
             <p class="SevenDaysPs">Готель знаходиться за адресою Закарпатська обл., Синевірська Поляна, 1</p>
             <p class="SevenDaysPs">Поряд розташоване кафе тільки для гостей готелю, масажний салон та аренда авто.</p>
             <p class="SevenDaysPs", id="addit1">3 дні перебування у готелі Ви будете харчуватися триразово, це входить у вартість туру.</p>
-            <a href="https://www.google.com.ua/maps"><button class="chooseButton", id="showMap">ПОКАЗАТИ НА КАРТІ</button></a>
+            <button class="chooseButton", id="showMap"><a href="https://www.google.com.ua/maps">ПОКАЗАТИ НА КАРТІ</a></button>
         </div>
     </div>
     <div class="info">
@@ -51,8 +51,8 @@
             <p>• релакс рум (без інтернету)</p>
             <p>• ніяких посторонніх шумів навколо готелю, тільки природа</p>
             <p id="addit2">ВСЕ ВЖЕ ВХОДИТЬ У ВАРТІСТЬ ТУРУ</p>
-            <button onclick="parent.location='tours.html'", class="chooseButton">ОБРАТИ ТУР</button>
-            <button onclick="parent.location='takeCons.html'", id="newButton">ЗАМОВИТИ КОНСУЛЬТАЦІЮ</button>
+            <button class="chooseButton"><a href="/tours">ОБРАТИ ТУР</a></button>
+            <button class="chooseButton" id="newButton"><a href="/taking_cons">ЗАМОВИТИ КОНСУЛЬТАЦІЮ</a></button>
         </div>
         <img id="hotelImg", src="/img/hotel.jpg" alt="">
     </div>
