--- a/src/main/resources/templates/sevenDaysTours.html
+++ b/src/main/resources/templates/sevenDaysTours.html
@@ -38,7 +38,7 @@
             <p>• ІДЕАЛЬНО ДЛЯ ПРОФЕСІОНАЛІВ</p>
             <p>• ЛЮКС ГОТЕЛЬ З ТРАДИЦІЙНОЮ ЇЖЕЮ КАРПАТ</p>
             <p>• ОБМІН ДОСІВДОМ СЕРЕД ПРОФЕСІОНАЛІВ</p>
-            <a href="takeCons.html"><button class="chooseButton" id="consultButton">ЗАМОВИТИ КОНСУЛЬТАЦІЮ</button></a>
+            <button class="chooseButton" id="consultButton"><a href="/taking_cons">ЗАМОВИТИ КОНСУЛЬТАЦІЮ</a></button>
         </div>
         <img src="/img/firstPic.jpg" alt="">
     </div>
@@ -54,7 +54,7 @@
                 <p class="toMargin">М. ЛЬВІВ, С ЛУЗАНОВЕ, С. СТУДОВЕ, ОЗЕРО СИНЕВІР, КАРПАТИ</p>
                 <p class="toWidth", id="firstWidth" >ДЕТАЛІ ТУРУ ОТРИМАЄШ НА Е-МЕЙЛ
                     ПІСЛЯ ЗАМОВЛЕННЯ ТУРУ</p>
-                <a href="takeTour.html"> <button class="callButton">ЗАМОВИТИ ТУР</button></a>
+                <button class="callButton"><a href="/taking_tour"> ЗАМОВИТИ ТУР</a></button>
             </div>
         </div>
         <div class="chooseTour">
@@ -66,7 +66,7 @@
                 <p class="toMargin">М. ЛЬВІВ, С ЛУЗАНОВЕ, С. СТУДОВЕ, ОЗЕРО СИНЕВІР, КАРПАТИ</p>
                 <p class="toWidth">ДЕТАЛІ ТУРУ ОТРИМАЄШ НА Е-МЕЙЛ
                     ПІСЛЯ ЗАМОВЛЕННЯ ТУРУ</p>
-                <a href="takeTour.html"><button class="callButton">ЗАМОВИТИ ТУР</button></a>
+                <button class="callButton"><a href="/taking_tour">ЗАМОВИТИ ТУР</a></button>
             </div>
             <img id="imgLess" src="/img/thirdPic.jpg" alt="">
         </div>
@@ -80,7 +80,7 @@
                 <p class="toMargin">М. ЛЬВІВ, С ЛУЗАНОВЕ, С. СТУДОВЕ, ОЗЕРО СИНЕВІР, КАРПАТИ</p>
                 <p class="toWidth", id="lastWidth">ДЕТАЛІ ТУРУ ОТРИМАЄШ НА Е-МЕЙЛ
                     ПІСЛЯ ЗАМОВЛЕННЯ ТУРУ</p>
-                <a href="takeTour.html"><button class="callButton">ЗАМОВИТИ ТУР</button></a>
+                <button class="callButton"><a href="/taking_tour">ЗАМОВИТИ ТУР</a></button>
             </div>
         </div>
     </div>
