--- a/src/main/resources/templates/tours.html
+++ b/src/main/resources/templates/tours.html
@@ -30,9 +30,9 @@
         <img class="imgMain" src="/img/thirdOne.png">
     </div>
     <div id="namesTours">
-        <a href="/individual_tours"><button class="buttonChoose">ІНДИВІДУАЛЬНІ ТУРИ</button></a>
-        <a href="/weekend_tours"><button class="buttonChoose">ТУРИ ВИХІДНОГО ДНЯ</button></a>
-        <a href="/seven_days_tour"><button class="buttonChoose">7-ДЕННІ ТУРИ</button></a>
+        <button class="buttonChoose"><a href="/individual_tours">ІНДИВІДУАЛЬНІ ТУРИ</a></button>
+        <button class="buttonChoose"><a href="/weekend_tours">ТУРИ ВИХІДНОГО ДНЯ</a></button>
+        <button class="buttonChoose"><a href="/seven_days_tour">7-ДЕННІ ТУРИ</a></button>
     </div>
     <footer>
         <div id="contacts">
