--- a/src/main/resources/templates/wDaysTours.html
+++ b/src/main/resources/templates/wDaysTours.html
@@ -33,7 +33,7 @@
             <p>• ІДЕАЛЬНО ДЛЯ НОВАЧКІВ ТА СІМЕЙ</p>
             <p>• ВСЬОГО 1,5 ДНІ (У НЕДІЛЮ ВВЕЧЕРІ ТИ ВЖЕ БУДЕШ ВДОМА)</p>
             <p>• НАТХНЕННЯ НА РОБОЧИЙ ТИЖДЕНЬ ВІД ПРИРОДИ КАРПАТ</p>
-            <a href="/taking_consulting"><button class="chooseButton">ЗАМОВИТИ КОНСУЛЬТАЦІЮ</button></a>
+            <button class="chooseButton"><a href="/taking_cons">ЗАМОВИТИ КОНСУЛЬТАЦІЮ</a></button>
         </div>
         <img src="/img/plusesImg.jpg" alt="">
     </div>
@@ -50,7 +50,7 @@
                 <p class="toMargin">2. ПОХІД У КАРПАТИ</p>
                 <p class="toWidth", id="firstWidth" >ДЕТАЛІ ТУРУ ОТРИМАЄШ НА Е-МЕЙЛ
                     ПІСЛЯ ЗАМОВЛЕННЯ ТУРУ</p>
-                <a href="/taking_tour"><button class="callButton">ЗАМОВИТИ ТУР</button></a>
+                <button class="callButton"><a href="/taking_tour">ЗАМОВИТИ ТУР</a></button>
             </div>
         </div>
         <div class="chooseTour">
@@ -63,7 +63,7 @@
                 <p class="toMargin">2. ПОХІД У КАРПАТИ</p>
                 <p class="toWidth">ДЕТАЛІ ТУРУ ОТРИМАЄШ НА Е-МЕЙЛ
                     ПІСЛЯ ЗАМОВЛЕННЯ ТУРУ</p>
-                <a href="/taking_tour"><button class="callButton">ЗАМОВИТИ ТУР</button></a>
+                <button class="callButton"><a href="/taking_tour">ЗАМОВИТИ ТУР</a></button>
             </div>
             <img id="imgLess" src="/img/twoPeopleSecond.jpg" alt="">
         </div>
@@ -78,7 +78,7 @@
                 <p class="toMargin">2. ПОХІД У КАРПАТИ</p>
                 <p class="toWidth", id="lastWidth">ДЕТАЛІ ТУРУ ОТРИМАЄШ НА Е-МЕЙЛ
                     ПІСЛЯ ЗАМОВЛЕННЯ ТУРУ</p>
-                <a href="/taking_tour"><button class="callButton">ЗАМОВИТИ ТУР</button></a>
+                <button class="callButton"><a href="/taking_tour">ЗАМОВИТИ ТУР</a></button>
             </div>
         </div>
     </div>
