--- a/src/main/resources/static/css/aboutUs.css
+++ b/src/main/resources/static/css/aboutUs.css
@@ -40,7 +40,7 @@ html, body{
   margin-top: -1%;
 }
 #menu>h4{
-  margin-top: 3%; 
+  margin-top: 3%;
   margin-bottom: 0;
 }
 #menu>h4:hover{
@@ -70,11 +70,11 @@ html, body{
 }
 #divFirst>button>h1{
   text-shadow: 6px 6px 30px rgba(0, 0, 0, 0.25);
-    font-size: 36px;
-    color: #FFFFFF;
-    text-align: center;
-    margin: 0;
-    -webkit-text-stroke: 2px #FFFFFF;
+  font-size: 36px;
+  color: #FFFFFF;
+  text-align: center;
+  margin: 0;
+  -webkit-text-stroke: 2px #FFFFFF;
 
 }
 #freeCons{
@@ -88,6 +88,7 @@ html, body{
 }
 #divFirst>img{
   border-radius: 100px;
+  margin-bottom: 10%;
 }
 .infoCons{
   text-align: center;
@@ -108,26 +109,38 @@ html, body{
   width: 450px;
   margin-right: 5%;
 }
-.buttonChoose{
-  width: 306px;
-  height: 87.99px;
+.takeTourButton1{
+  margin-top: -1%;
+  margin-left: -12%;
+  margin-bottom: 3%;
+  position: absolute;
+  width: 400px;
+  height: 88px;
 
+  text-decoration: none;
   background: #FD5E53;
   border-radius: 100px;
   border-width: 0;
-  font-size: 36px;
+  font-size: 46px;
   color: #FFFFFF;
-  width: 390px;
-  height: 75px;
-  margin-bottom: 5%;
 }
-.buttonChoose>p{
+.takeTourButton1>h1{
   text-shadow: 6px 6px 30px rgba(0, 0, 0, 0.25);
-    font-size: 36px;
-    color: #FFFFFF;
-    text-align: center;
-    margin: 0;
-    -webkit-text-stroke: 2px #FFFFFF;
+  font-size: 43px;
+  color: #FFFFFF;
+  text-align: center;
+  margin: 0;
+  margin-top: 6%;
+  -webkit-text-stroke: 3px #FFFFFF;
+}
+#cons{
+  width:500px;
+  margin-top: 11%;
+  margin-left: -12.5%;
+}
+#cons1{
+  margin-left: -10%;
+  height: 75px;
 }
 #free{
   width: 550px;
